--- a/src/js/record/component/compatibility.module.css
+++ b/src/js/record/component/compatibility.module.css
@@ -1,8 +1,15 @@
 .vs_btn{
     background-color:white;
     color: black;
-    border: 5px solid;
+    border: 2px solid;
     font-size: 24px;
-    padding:10px 47px ;
     font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease 0.3s ;
+    padding:10px 47px ;
+}
+
+.vs_btn:hover{
+    background-color: black;
+    color: white;
 }
