--- a/src/js/home/component/home.module.css
+++ b/src/js/home/component/home.module.css
@@ -18,3 +18,13 @@
   top: 3px;
   box-shadow: none;
 }
+.Home_header {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color:#282c34;
+}
+
